@@ -1120,7 +1120,9 @@ void vo_x11_create_vo_window(XVisualInfo *vis, int x, int y,
     XSelectInput(mDisplay, vo_window, StructureNotifyMask);
     hint.x = x; hint.y = y;
     hint.width = width; hint.height = height;
-    hint.flags = PPosition | PSize;
+    hint.flags = PSize;
+    if (geometry_xy_changed)
+      hint.flags |= PPosition;
     XSetStandardProperties(mDisplay, vo_window, title, title, None, NULL, 0, &hint);
     if (!vo_border) vo_x11_decoration(mDisplay, vo_window, 0);
     // map window
@@ -1137,6 +1139,8 @@ void vo_x11_create_vo_window(XVisualInfo *vis, int x, int y,
           ButtonPressMask | ButtonReleaseMask | ExposureMask);
   }
   if (vo_ontop) vo_x11_setlayer(mDisplay, vo_window, vo_ontop);
+  if (!geometry_xy_changed)
+    vo_x11_update_geometry();
   vo_x11_nofs_sizepos(vo_dx, vo_dy, width, height);
   if (!!vo_fs != !!(flags & VOFLAG_FULLSCREEN))
     vo_x11_fullscreen();
